--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -42,6 +42,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
+    "com.unity.modules.xr": "1.0.0",
+    "com.monitor1394.xcharts" : "https://github.com/XCharts-Team/XCharts.git"
   }
 }
